fix spacing in search box

--- a/client/css/less/components/widgets.less
+++ b/client/css/less/components/widgets.less
@@ -138,17 +138,14 @@
   height: 27px;
   width: 360px;
 
-  .search, .clear {
-    color: @lightGray;
-    line-height: 27px;
-  }
+  .search, .clear { color: @lightGray; }
 
   .search {
     position: absolute;
     left: 2px;
     top: 0;
     bottom: 0;
-    line-height: 26px;
+    line-height: 27px;
   }
 
   .clear {
@@ -161,17 +158,18 @@
     padding: 0;
     border: none;
     background: none;
-    line-height: 27px;
+
+    i { line-height: 27px; }
   }
 
   .search-box {
     width: 100%;
     height: 27px;
-    padding: 2px 20px;
+    padding: 0 20px 0 22px;
     font-size: 14px;
     color: @lightBlack;
     border-radius: 12px;
-    border: 1px solid transparent;
+    border: 1px solid darken(@ashGray, 30%);
     background: @ashGray;
     .box-sizing(border-box);
 
